ecmascript/parser/tests/test262-error-references/fail/0ebf57bd8c051d27.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/0ebf57bd8c051d27.js:1:5
  |
1 | [{a = 0}];
  |     ^

